<resources>
    <string name="app_name">Battery Alarm</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save">SAVE</string>
    <string name="notification_created">Notification has been created.</string>
    <string name="notification_updated">Changes to notification have been saved.</string>
    <string name="battery_percentage">Battery Percentage</string>
    <string name="zero_percent">0%</string>
    <string name="hundred_percent">100%</string>
    <string name="battery_status">Battery Status</string>
    <string name="fifty_percent">50%</string>
    <string name="ringtone_title">Notification sound</string>
    <string name="ringtone_text">Select sound</string>
    <string name="ringtone_volume_title">Notification volume</string>
    <string name="vibration_title">Vibrate</string>
    <string name="list_header">Active</string>
    <string name="toast_notification_activated">Notification has been activated.</string>
    <string name="toast_notification_deactivated">Notification has been deactivated.</string>
    <string name="status_charging">Charging</string>
    <string name="status_discharging">Discharging</string>
    <string name="status_full">Full</string>
    <string name="header_text">Battery now at:</string>
    <string name="info_edit">Tap and hold for options.</string>
    <string name="dialog_delete_title">Delete Notification</string>
    <string name="dialog_delete_message">Are you sure you want to completely remove this notification?</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="dialog_delete_negative">Cancel</string>
    <string name="notification_deleted">Notification has been deleted.</string>
    <string name="invalid_ringtone">Invalid ringtone selected</string>
    <string name="fifty">50</string>
    <string name="no_notifications">You have not created any notifications yet.</string>

    <!-- Battery Status Values -->
    <string-array name="status_values_array">
        <item>Discharging</item>
        <item>Charging</item>
    </string-array>

    <string-array name="longclick_options_array_active">
        <item>Deactivate</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="longclick_options_array_deactivated">
        <item>Activate</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

</resources>
