<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/spacing_small"
        android:paddingTop="@dimen/spacing_tiny"
        android:paddingBottom="@dimen/spacing_tiny"
        android:background="@color/bluegray_extralight"
        >

        <TextView
            android:id="@+id/text_heaader_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_medium"
            android:text="@string/header_text"/>

        <TextView
            android:id="@+id/text_header_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_medium"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/fifty_percent"/>

        <TextView
            android:id="@+id/text_header_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_charging"/>

    </LinearLayout>

    <!--<ImageView-->
        <!--android:id="@+id/image_header"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_below="@+id/layout_header"-->
        <!--android:background="@color/bluegray_transparent"/>-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/notifications_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</RelativeLayout>