<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ModifyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_tiny">

        <TextView
            android:id="@+id/text_percentage_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery_percentage"
            android:layout_marginLeft="@dimen/spacing_normal"
            style="@style/ListTitleText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1"
            android:layout_marginTop="@dimen/spacing_small">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zero_percent"
                style="@style/LightText"
                android:maxLines="1"
                android:gravity="end"
                android:layout_weight="0.15"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekbar_percentage"
                style="@style/Widget.AppCompat.SeekBar"
                android:max="20"
                android:progress="10"
                android:layout_weight="0.7"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hundred_percent"
                style="@style/LightText"
                android:maxLines="1"
                android:gravity="start"
                android:layout_weight="0.15"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_percentage_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/fifty_percent"
            style="@style/RegularText"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bluegray_transparent"/>

    <LinearLayout
        android:id="@+id/layout_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_normal"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:paddingBottom="@dimen/spacing_small"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/text_status_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery_status"
            style="@style/ListTitleText"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_status"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bluegray_transparent"/>

    <LinearLayout
        android:id="@+id/layout_ringtone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_normal"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">


        <TextView
            android:id="@+id/text_ringtone_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone_title"
            style="@style/ListTitleText"/>

        <TextView
            android:id="@+id/text_ringtone_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone_text"
            style="@style/RegularText"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bluegray_transparent"/>

    <LinearLayout
        android:id="@+id/layout_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:paddingTop="@dimen/spacing_normal"
        android:background="?attr/selectableItemBackground">


        <TextView
            android:id="@+id/text_volume_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ringtone_volume_title"
            style="@style/ListTitleText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_small">

            <ImageButton
                android:id="@+id/button_volume_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:src="@mipmap/ic_volume_min"
                style="?attr/borderlessButtonStyle"
                android:padding="0dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>

            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekbar_volume"
                style="@style/Widget.AppCompat.SeekBar"
                android:max="4"
                android:progress="2"
                android:layout_weight="0.84"
                />

            <ImageView
                android:id="@+id/button_volume_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_volume_max"
                style="?attr/borderlessButtonStyle"
                android:padding="0dp"
                android:adjustViewBounds="true"
                android:layout_weight="0.08"
                android:scaleType="fitXY"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bluegray_transparent"/>

    <RelativeLayout
        android:id="@+id/layout_vibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal"
        android:clickable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/text_vibration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibration_title"
            android:layout_centerVertical="true"
            style="@style/ListTitleText"/>

        <CheckBox
            android:id="@+id/checkbox_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />


    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bluegray_transparent"/>


</LinearLayout>
